# auditorium-booking

./: .env  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  Makefile  mail.py  postgres_db.md  readme.md
frontend/: package.json  qr.html
frontend/src/Components/Calendar/EventDetailDialog/ReadOnlyDetail/: index.jsx
frontend/src/Hooks/: index.js
migrations/2020-03-08-082736_audit/: down.sql  up.sql
src/: admin.rs  audit.rs  auth.rs  booking.rs  db.rs  lib.rs  main.rs  models.rs  response.rs  schema.rs  static_server.rs
tests/: booking.rs
